--- a/login.html
+++ b/login.html
@@ -70,9 +70,6 @@
               <a class="dropdown-item" href="#">
                 <i class="now-ui-icons business_badge"></i> Cadastrar
               </a>
-              <a class="dropdown-item" href="./login.html">
-                <i class="now-ui-icons users_single-02"></i> Login
-              </a>
             </div>
           </li>
           <li class="nav-item">
@@ -100,7 +97,7 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header clear-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_01.jpg');">
+      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_09.jpg');">
       </div>
     <div class="content">
       <div class="container">
@@ -108,9 +105,7 @@
           <div class="card card-login card-plain">
             <form class="form" method="" action="">
               <div class="card-header text-center">
-                <div class="logo-container">
-                  <img src="../assets/img/now-logo.png" alt="">
-                </div>
+                <h2>Gerenciar nunca foi tão fácil</h2>
               </div>
               <div class="card-body">
                 <div class="input-group no-border input-lg">
@@ -127,7 +122,7 @@
                       <i class="now-ui-icons ui-1_lock-circle-open"></i>
                     </span>
                   </div>
-                  <input type="text" placeholder="Senha..." class="form-control" />
+                  <input type="password" placeholder="Senha..." class="form-control" />
                 </div>
               </div>
               <div class="card-footer text-center">
