--- a/manager.html
+++ b/manager.html
@@ -33,7 +33,7 @@
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
     <div class="container">
       <div class="navbar-translate">
-        <a class="#" href="./index.html" rel="#" data-placement="bottom">
+        <a class="#" href="#" rel="#" data-placement="bottom">
           ListApp
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,20 +44,7 @@
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="./assets/img/blurred-image-1.jpg">
         <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink1" data-toggle="dropdown">
-              <i class="now-ui-icons business_briefcase-24"></i>
-              <p>Franqueado</p>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink1">
-              <a class="dropdown-item" href="#">
-                <i class="now-ui-icons travel_info"></i> Dúvidas
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="now-ui-icons business_badge"></i> Cadastrar
-              </a>
-            </div>
-          </li>
+
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink1" data-toggle="dropdown">
               <i class="now-ui-icons shopping_shop"></i>
@@ -65,13 +52,19 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink1">
               <a class="dropdown-item" href="#">
-                <i class="now-ui-icons travel_info"></i> Dúvidas
+                <i class="now-ui-icons design_bullet-list-67"></i> Ativar / Inativar Produto
               </a>
               <a class="dropdown-item" href="#">
-                <i class="now-ui-icons business_badge"></i> Cadastrar
+                <i class="now-ui-icons shopping_delivery-fast"></i> Bairros p/ Entrega
               </a>
-              <a class="dropdown-item" href="./login.html">
-                <i class="now-ui-icons users_single-02"></i> Login
+              <a class="dropdown-item" href="#">
+                <i class="now-ui-icons files_single-copy-04"></i> Relatórios Vendas
+              </a>
+              <a class="dropdown-item" href="#">
+                <i class="now-ui-icons files_single-copy-04"></i> Relatórios Avaliações
+              </a>
+              <a class="dropdown-item" href="./index.html">
+                <i class="now-ui-icons users_single-02"></i> Sair
               </a>
             </div>
           </li>
@@ -100,11 +93,11 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header clear-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_01.jpg');">
+      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_07.jpg');">
       </div>
       <div class="container">
         <div class="photo-container">
-          <img src="../assets/img/ryan.jpg" alt="">
+          <img src="./assets/img/default-avatar.png" alt="">
         </div>
         <h3 class="title">Bem Vindo!</h3>
         <p class="category">Nunca foi tão fácil gerenciar um Mercado.</p>
