--- a/index.html
+++ b/index.html
@@ -128,6 +128,81 @@
             </div>
           </div>
         </div>
+        <div class="section profile-page">
+          <div class="container">
+            <h3 class="title">Importante</h3>
+            <h5 class="description">Olá, seja bem vindo ao ser novo mundo! É aqui que você irá gerenciar seu mercado. Esperamos que sua experiência seja maravilhosa e contamos com você para poder melhorar cada vez mais e crescermos juntos! Por estarmos em fase de teste pedimos que qualquer dúvida ou sugestão que venha a surgir, por favor, não deixe de entrar em contato conosco! No mais é isso. Sucesso e boas vendas!</h5>
+            <div class="row">
+              <div class="col-md-6 ml-auto mr-auto">
+                <h4 class="title text-center">My Portfolio</h4>
+                <div class="nav-align-center">
+                  <ul class="nav nav-pills nav-pills-primary nav-pills-just-icons" role="tablist">
+                    <li class="nav-item">
+                      <a class="nav-link" data-toggle="tab" href="#profile" role="tablist">
+                        <i class="now-ui-icons shopping_basket"></i>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
+                        <i class="now-ui-icons shopping_shop"></i>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
+                        <i class="now-ui-icons shopping_box"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- Tab panes -->
+              <div class="tab-content gallery">
+                <div class="tab-pane active" id="home" role="tabpanel">
+                  <div class="col-md-10 ml-auto mr-auto">
+                    <div class="row collections">
+                      <div class="col-md-6">
+                        <img src="./assets/img/old_01.jpg" alt="" class="img-raised">
+                        <img src="./assets/img/old_02.jpg" alt="" class="img-raised">
+                      </div>
+                      <div class="col-md-6">
+                        <img src="./assets/img/old_03.jpg" alt="" class="img-raised">
+                        <img src="./assets/img/old_05.jpg" alt="" class="img-raised">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane" id="profile" role="tabpanel">
+                  <div class="col-md-10 ml-auto mr-auto">
+                    <div class="row collections">
+                      <div class="col-md-6">
+                        <img src="./assets/img/banner_03.jpg" class="img-raised">
+                        <img src="./assets/img/banner_05.jpg" alt="" class="img-raised">
+                      </div>
+                      <div class="col-md-6">
+                        <img src="./assets/img/banner_04.jpg" alt="" class="img-raised">
+                        <img src="./assets/img/banner_08.jpg" alt="" class="img-raised">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane" id="messages" role="tabpanel">
+                  <div class="col-md-10 ml-auto mr-auto">
+                    <div class="row collections">
+                      <div class="col-md-6">
+                        <img src="./assets/img/banner_03.jpg" alt="" class="img-raised">
+                        <img src="./assets/img/banner_05.jpg" alt="" class="img-raised">
+                      </div>
+                      <div class="col-md-6">
+                        <img src="./assets/img/banner_04.jpg" alt="" class="img-raised">
+                        <img src="./assets/img/banner_08.jpg" class="img-raised">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <footer class="footer footer-default">
             <div class=" container ">
               <nav>
