--- a/manager.html
+++ b/manager.html
@@ -44,7 +44,6 @@
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="./assets/img/blurred-image-1.jpg">
         <ul class="navbar-nav">
-
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink1" data-toggle="dropdown">
               <i class="now-ui-icons shopping_shop"></i>
@@ -105,77 +104,8 @@
     </div>
     <div class="section">
       <div class="container">
-        <h3 class="title">About me</h3>
-        <h5 class="description">An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</h5>
-        <div class="row">
-          <div class="col-md-6 ml-auto mr-auto">
-            <h4 class="title text-center">My Portfolio</h4>
-            <div class="nav-align-center">
-              <ul class="nav nav-pills nav-pills-primary nav-pills-just-icons" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#profile" role="tablist">
-                    <i class="now-ui-icons design_image"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
-                    <i class="now-ui-icons location_world"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
-                    <i class="now-ui-icons sport_user-run"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <!-- Tab panes -->
-          <div class="tab-content gallery">
-            <div class="tab-pane active" id="home" role="tabpanel">
-              <div class="col-md-10 ml-auto mr-auto">
-                <div class="row collections">
-                  <div class="col-md-6">
-                    <img src="../assets/img/bg1.jpg" alt="" class="img-raised">
-                    <img src="../assets/img/bg3.jpg" alt="" class="img-raised">
-                  </div>
-                  <div class="col-md-6">
-                    <img src="../assets/img/bg8.jpg" alt="" class="img-raised">
-                    <img src="../assets/img/bg7.jpg" alt="" class="img-raised">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane" id="profile" role="tabpanel">
-              <div class="col-md-10 ml-auto mr-auto">
-                <div class="row collections">
-                  <div class="col-md-6">
-                    <img src="../assets/img/bg6.jpg" class="img-raised">
-                    <img src="../assets/img/bg11.jpg" alt="" class="img-raised">
-                  </div>
-                  <div class="col-md-6">
-                    <img src="../assets/img/bg7.jpg" alt="" class="img-raised">
-                    <img src="../assets/img/bg8.jpg" alt="" class="img-raised">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane" id="messages" role="tabpanel">
-              <div class="col-md-10 ml-auto mr-auto">
-                <div class="row collections">
-                  <div class="col-md-6">
-                    <img src="../assets/img/bg3.jpg" alt="" class="img-raised">
-                    <img src="../assets/img/bg8.jpg" alt="" class="img-raised">
-                  </div>
-                  <div class="col-md-6">
-                    <img src="../assets/img/bg7.jpg" alt="" class="img-raised">
-                    <img src="../assets/img/bg6.jpg" class="img-raised">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h3 class="title">Importante</h3>
+        <h5 class="description">Olá, seja bem vindo ao ser novo mundo! É aqui que você irá gerenciar seu mercado. Esperamos que sua experiência seja maravilhosa e contamos com você para poder melhorar cada vez mais e crescermos juntos! Por estarmos em fase de teste pedimos que qualquer dúvida ou sugestão que venha a surgir, por favor, não deixe de entrar em contato conosco! No mais é isso. Sucesso e boas vendas!</h5>
       </div>
     </div>
     <footer class="footer footer-default">
