--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         </div>
         <div class="section profile-page">
           <div class="container">
-            <h3 class="title">Importante</h3>
-            <h5 class="description">Olá, seja bem vindo ao ser novo mundo! É aqui que você irá gerenciar seu mercado. Esperamos que sua experiência seja maravilhosa e contamos com você para poder melhorar cada vez mais e crescermos juntos! Por estarmos em fase de teste pedimos que qualquer dúvida ou sugestão que venha a surgir, por favor, não deixe de entrar em contato conosco! No mais é isso. Sucesso e boas vendas!</h5>
+            <h3 class="title">Seja bem vindo!</h3>
+            <h5 class="description">Estamos vivendo em um mundo de mudanças, mudamos a forma como pedimos lanche, mudamos a forma de pedir um taxi, e com nossa feira não poderia ser diferente. Tenha na palma de sua mão diversos mercados, faça suas compras e receba na sua casa!</h5>
             <div class="row">
               <div class="col-md-6 ml-auto mr-auto">
-                <h4 class="title text-center">My Portfolio</h4>
+                <h4 class="title text-center">ListApp</h4>
                 <div class="nav-align-center">
                   <ul class="nav nav-pills nav-pills-primary nav-pills-just-icons" role="tablist">
                     <li class="nav-item">
