--- a/manager.html
+++ b/manager.html
@@ -105,7 +105,7 @@
     <div class="section">
       <div class="container">
         <h3 class="title">Importante</h3>
-        <h5 class="description">Olá, seja bem vindo ao ser novo mundo! É aqui que você irá gerenciar seu mercado. Esperamos que sua experiência seja maravilhosa e contamos com você para poder melhorar cada vez mais e crescermos juntos! Por estarmos em fase de teste pedimos que qualquer dúvida ou sugestão que venha a surgir, por favor, não deixe de entrar em contato conosco! No mais é isso. Sucesso e boas vendas!</h5>
+        <h5 class="description">Olá, seja bem vindo ao seu novo mundo! É aqui que você vai gerenciar seu mercado. Esperamos que sua experiência seja maravilhosa e contamos com você para poder melhorar cada vez mais e crescermos juntos! Por estarmos em fase de teste pedimos que qualquer dúvida ou sugestão que venha a surgir, por favor, não deixe de entrar em contato conosco! No mais é isso. Sucesso e boas vendas!</h5>
       </div>
     </div>
     <footer class="footer footer-default">
