--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
       </div>
       <div class="container">
         <div class="content-center brand">
-          <img class="n-logo" src="./assets/img/now-logo.png" alt="">
-          <h1 class="h1">ListApp</h1>
+          <img class="" src="./assets/img/logo_01_01.png" alt="">
           <h3>Pare de perder tempo em filas e corredores</h3>
           <h3>Experimente o novo!</h3>
         </div>
