--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header clear-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_01.jpg');">
+      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_10_1920x1080.jpg');">
       </div>
       <div class="container">
         <div class="content-center brand">
-          <img class="" src="./assets/img/logo_01_01.png" alt="">
+          <img class="" src="./assets/img/logo_transparencia_255x242.png" alt="">
           <h3>Pare de perder tempo em filas e corredores</h3>
           <h3>Experimente o novo!</h3>
         </div>
@@ -128,78 +128,50 @@
           </div>
         </div>
         <div class="section profile-page">
-          <div class="container">
+          <div class="content-center brand">
             <h3 class="title">Seja bem vindo!</h3>
             <h5 class="description">Estamos vivendo em um mundo de mudanças, mudamos a forma como pedimos lanche, mudamos a forma de pedir um taxi, e com nossa feira não poderia ser diferente. Tenha na palma de sua mão diversos mercados, faça suas compras e receba na sua casa!</h5>
-            <div class="row">
-              <div class="col-md-6 ml-auto mr-auto">
-                <h4 class="title text-center">ListApp</h4>
-                <div class="nav-align-center">
-                  <ul class="nav nav-pills nav-pills-primary nav-pills-just-icons" role="tablist">
-                    <li class="nav-item">
-                      <a class="nav-link" data-toggle="tab" href="#profile" role="tablist">
-                        <i class="now-ui-icons shopping_basket"></i>
+            <div class="section" id="carousel">
+              <div class="content-center brand">
+                <div class="row justify-content-center">
+                  <div class="col-lg-8 col-md-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                          <img class="d-block" src="assets/img/carro_1440x960.jpg" alt="First slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>Receba suas compras no conforto de sua casa :)</h5>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block" src="assets/img/caixa_1440x960.jpg" alt="Second slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block" src="assets/img/logo_1440x960.jpg" alt="Third slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>Se o mercado tem, você encontra aqui!</h5>
+                          </div>
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <i class="now-ui-icons arrows-1_minimal-left"></i>
                       </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
-                        <i class="now-ui-icons shopping_shop"></i>
+                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <i class="now-ui-icons arrows-1_minimal-right"></i>
                       </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
-                        <i class="now-ui-icons shopping_box"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Tab panes -->
-              <div class="tab-content gallery">
-                <div class="tab-pane active" id="home" role="tabpanel">
-                  <div class="col-md-10 ml-auto mr-auto">
-                    <div class="row collections">
-                      <div class="col-md-6">
-                        <img src="./assets/img/old_01.jpg" alt="" class="img-raised">
-                        <img src="./assets/img/old_02.jpg" alt="" class="img-raised">
-                      </div>
-                      <div class="col-md-6">
-                        <img src="./assets/img/old_03.jpg" alt="" class="img-raised">
-                        <img src="./assets/img/old_05.jpg" alt="" class="img-raised">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="profile" role="tabpanel">
-                  <div class="col-md-10 ml-auto mr-auto">
-                    <div class="row collections">
-                      <div class="col-md-6">
-                        <img src="./assets/img/banner_03.jpg" class="img-raised">
-                        <img src="./assets/img/banner_05.jpg" alt="" class="img-raised">
-                      </div>
-                      <div class="col-md-6">
-                        <img src="./assets/img/banner_04.jpg" alt="" class="img-raised">
-                        <img src="./assets/img/banner_08.jpg" alt="" class="img-raised">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="messages" role="tabpanel">
-                  <div class="col-md-10 ml-auto mr-auto">
-                    <div class="row collections">
-                      <div class="col-md-6">
-                        <img src="./assets/img/banner_03.jpg" alt="" class="img-raised">
-                        <img src="./assets/img/banner_05.jpg" alt="" class="img-raised">
-                      </div>
-                      <div class="col-md-6">
-                        <img src="./assets/img/banner_04.jpg" alt="" class="img-raised">
-                        <img src="./assets/img/banner_08.jpg" class="img-raised">
-                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </div> 
           </div>
         </div>
         <footer class="footer footer-default">
