--- a/manager.html
+++ b/manager.html
@@ -92,11 +92,11 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header clear-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_07.jpg');">
+      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_07_1920x1080.jpg');">
       </div>
       <div class="container">
         <div class="photo-container">
-          <img src="./assets/img/default-avatar.png" alt="">
+          <img src="./assets/img/logo_500x500.jpg" alt="">
         </div>
         <h3 class="title">Bem Vindo!</h3>
         <p class="category">Nunca foi tão fácil gerenciar um Mercado.</p>
