--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header clear-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_09.jpg');">
+      <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_09_1920x1080.jpg');">
       </div>
     <div class="content">
       <div class="container">
