--- a/manager.html
+++ b/manager.html
@@ -68,19 +68,19 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/login?lang=pt" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Siga-nos no Twitter" data-placement="bottom" href="https://twitter.com/deliverylistapp" target="_blank">
               <i class="fab fa-twitter"></i>
               <p class="d-lg-none d-xl-none">Twitter</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Curta-nos no Facebook" data-placement="bottom" href="https://pt-br.facebook.com/deliverylistapp" target="_blank">
               <i class="fab fa-facebook-square"></i>
               <p class="d-lg-none d-xl-none">Facebook</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/?hl=pt-br" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Siga-nos no Instagram" data-placement="bottom" href="https://www.instagram.com/deliverylistapp/" target="_blank">
               <i class="fab fa-instagram"></i>
               <p class="d-lg-none d-xl-none">Instagram</p>
             </a>
