--- a/manager.html
+++ b/manager.html
@@ -113,17 +113,17 @@
         <nav>
           <ul>
             <li>
-              <a href="#">
+              <a href="./about_.html">
                 Quem Somos
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="./contact_.html">
                 Fale Conosco
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://play.google.com/store" target="_blank">
                 Baixar App
               </a>
             </li>
