--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="dropdown-item" href="#">
                 <i class="now-ui-icons travel_info"></i> Dúvidas
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./franchisedRegistration.html">
                 <i class="now-ui-icons business_badge"></i> Cadastrar
               </a>
             </div>
@@ -67,7 +67,7 @@
               <a class="dropdown-item" href="#">
                 <i class="now-ui-icons travel_info"></i> Dúvidas
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./logistaRegistration.html">
                 <i class="now-ui-icons business_badge"></i> Cadastrar
               </a>
               <a class="dropdown-item" href="./login.html">
