--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
               <a class="dropdown-item" href="#">
                 <i class="now-ui-icons travel_info"></i> Dúvidas
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./franchisedRegistration.html">
                 <i class="now-ui-icons business_badge"></i> Cadastrar
               </a>
             </div>
@@ -67,7 +67,7 @@
               <a class="dropdown-item" href="#">
                 <i class="now-ui-icons travel_info"></i> Dúvidas
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./logistaRegistration.html">
                 <i class="now-ui-icons business_badge"></i> Cadastrar
               </a>
             </div>
@@ -148,17 +148,17 @@
         <nav>
           <ul>
             <li>
-              <a href="#">
+              <a href="./about_.html">
                 Quem Somos
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="./contact_.html">
                 Fale Conosco
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://play.google.com/store" target="_blank">
                 Baixar App
               </a>
             </li>
