--- a/login.html
+++ b/login.html
@@ -129,12 +129,12 @@
                 <a href="./manager.html" class="btn btn-primary btn-round btn-lg btn-block">Entrar</a>
                 <div class="pull-left">
                   <h6>
-                    <a href="#pablo" class="link">Criar Conta</a>
+                    <a href="./logistaRegistration.html" class="link">Criar Conta</a>
                   </h6>
                 </div>
                 <div class="pull-right">
                   <h6>
-                    <a href="#pablo" class="link">Precisa de Ajuda?</a>
+                    <a href="./contact.html" class="link">Precisa de Ajuda?</a>
                   </h6>
                 </div>
             </form>
