--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="./contact_.html">
+                    <a href="./contact.html">
                       Fale Conosco
                     </a>
                   </li>
