--- a/login.html
+++ b/login.html
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li>
-              <a href="./contact_.html">
+              <a href="./contact.html">
                 Fale Conosco
               </a>
             </li>
