--- a/manager.html
+++ b/manager.html
@@ -118,7 +118,7 @@
               </a>
             </li>
             <li>
-              <a href="./contact_.html">
+              <a href="./contact.html">
                 Fale Conosco
               </a>
             </li>
