--- a/manager.html
+++ b/manager.html
@@ -50,7 +50,7 @@
               <p>Varejista</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink1">
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./activateProducts.html">
                 <i class="now-ui-icons design_bullet-list-67"></i> Ativar / Inativar Produto
               </a>
               <a class="dropdown-item" href="#">
