--- a/activateProducts.html
+++ b/activateProducts.html
@@ -100,12 +100,37 @@
           <p class="category">Escolha abaixo os produtos disponivei no seu comércio</p>
         </div>
       </div>
-      <div class="section">
+
+      <div class="section section-javascript" id="javascriptComponents">
         <div class="container">
-          <h3 class="title">Importante</h3>
-          <h5 class="description">Olá, seja bem vindo ao seu novo mundo! É aqui que você vai gerenciar seu mercado. Esperamos que sua experiência seja maravilhosa e contamos com você para poder melhorar cada vez mais e crescermos juntos! Por estarmos em fase de teste pedimos que qualquer dúvida ou sugestão que venha a surgir, por favor, não deixe de entrar em contato conosco! No mais é isso. Sucesso e boas vendas!</h5>
+          <h3 class="title">Gerenciamento de produtos</h3>
+          <div class="row" id="modals">
+            <br />
+            <br />
+            <div class="col-lg-6">
+              <h4>Busca por produto:</h4>
+              <div class="row">
+                <div class="col-sm-6 col-lg-8">
+                  <div class="form-group has-success">
+                    <input type="text" value="" class="form-control form-control-success" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <h4>.</h4>
+                <button class="btn btn-primary btn-icon btn-round" type="button">
+                  <i class="now-ui-icons ui-1_zoom-bold"></i>
+                </button>
+                <br>
+                <br>
+            </div>
+          </div>
         </div>
       </div>
+
+
+      
       <footer class="footer footer-default">
         <div class=" container ">
           <nav>
