--- a/deliveryLocations.html
+++ b/deliveryLocations.html
@@ -50,9 +50,8 @@
                 <p>Varejista</p>
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink1">
-
-                <a class="dropdown-item" href="./deliveryLocations.html">
-                  <i class="now-ui-icons shopping_delivery-fast"></i> Bairros p/ Entrega
+                <a class="dropdown-item" href="./activateProducts.html">
+                    <i class="now-ui-icons design_bullet-list-67"></i> Ativar / Inativar Produto
                 </a>
                 <a class="dropdown-item" href="./manager.html">
                   <i class="now-ui-icons files_single-copy-04"></i> Relatórios Vendas
@@ -93,21 +92,21 @@
         <div class="page-header-image" data-parallax="true" style="background-image:url('./assets/img/banner_07_1920x1080.jpg');">
         </div>
         <div class="container">
-          <div class="photo-container">
-            <img src="./assets/img/logo_500x500.jpg" alt="">
-          </div>
-          <h3 class="title">Bem Vindo!</h3>
-          <p class="category">Nunca foi tão fácil gerenciar um Mercado.</p>
+            <div class="photo-container">
+                <img src="./assets/img/logo_500x500.jpg" alt="">
+            </div>
+            <h3 class="title">Bem Vindo!</h3>
+            <p class="category">Nunca foi tão fácil gerenciar um Mercado.</p>
         </div>
       </div>
       <div class="section section-javascript" id="javascriptComponents">
         <div class="container">
-          <h3 class="title">Gerenciamento de produtos</h3>
+          <h3 class="title">Gerenciamento de Bairros para Entrega</h3>
           <div class="row" id="modals">
             <br />
             <br />
             <div class="col-lg-6">
-              <h4>Busca por produto:</h4>
+              <h4>Busca por Cidade:</h4>
               <div class="row">
                 <div class="col-sm-6 col-lg-8">
                   <div class="form-group has-success">
@@ -126,7 +125,7 @@
         <thead class="thead-light">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">Nome Produto</th>
+            <th scope="col">Nome do Bairro</th>
             <th scope="col">Disponibilidade</th>
             <th scope="col">Valor</th>
           </tr>
@@ -134,7 +133,7 @@
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>Arroz Kika 1kg</td>
+            <td>Centro</td>
             <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
             <td>
               <div class="input-group mb-3">
@@ -147,7 +146,7 @@
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>Feijão Preto 1kg</td>
+            <td>Catolé</td>
             <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
             <td>
               <div class="input-group mb-3">
@@ -160,7 +159,7 @@
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>Café tres corações</td>
+            <td>Malvinas</td>
             <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
             <td>
               <div class="input-group mb-3">
@@ -173,7 +172,7 @@
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>Jucurutu</td>
+            <td>Cruzeiro</td>
             <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
             <td>
               <div class="input-group mb-3">
@@ -188,9 +187,9 @@
       </table>
       <div class="send-button">
         <button class="btn btn-primary btn-round btn-block btn-lg" data-toggle="modal" data-target="#myModal1">
-          Salvar
+            Salvar
         </button>
-      </div>
+        </div>
       <div class="space-70"></div>
       </div>
       <div class="space-70"></div>
