--- a/manager.html
+++ b/manager.html
@@ -53,7 +53,7 @@
               <a class="dropdown-item" href="./activateProducts.html">
                 <i class="now-ui-icons design_bullet-list-67"></i> Ativar / Inativar Produto
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./deliveryLocations.html">
                 <i class="now-ui-icons shopping_delivery-fast"></i> Bairros p/ Entrega
               </a>
               <a class="dropdown-item" href="#">
