--- a/deliveryLocations.html
+++ b/deliveryLocations.html
@@ -53,10 +53,10 @@
                 <a class="dropdown-item" href="./activateProducts.html">
                     <i class="now-ui-icons design_bullet-list-67"></i> Ativar / Inativar Produto
                 </a>
-                <a class="dropdown-item" href="./manager.html">
+                <a class="dropdown-item" href="./salesReport.html">
                   <i class="now-ui-icons files_single-copy-04"></i> Relatórios Vendas
                 </a>
-                <a class="dropdown-item" href="./manager.html">
+                <a class="dropdown-item" href="./clientReport.html">
                   <i class="now-ui-icons files_single-copy-04"></i> Relatórios Avaliações
                 </a>
                 <a class="dropdown-item" href="./index.html">
@@ -101,7 +101,7 @@
       </div>
       <div class="section section-javascript" id="javascriptComponents">
         <div class="container">
-          <h3 class="title">Gerenciamento de Bairros para Entrega</h3>
+          <h3 class="title">Bairros p/ Entrega</h3>
           <div class="row" id="modals">
             <br />
             <br />
@@ -171,7 +171,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">3</th>
+            <th scope="row">4</th>
             <td>Cruzeiro</td>
             <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
             <td>
