--- a/manager.html
+++ b/manager.html
@@ -56,10 +56,10 @@
               <a class="dropdown-item" href="./deliveryLocations.html">
                 <i class="now-ui-icons shopping_delivery-fast"></i> Bairros p/ Entrega
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./salesReport.html">
                 <i class="now-ui-icons files_single-copy-04"></i> Relatórios Vendas
               </a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="./clientReport.html">
                 <i class="now-ui-icons files_single-copy-04"></i> Relatórios Avaliações
               </a>
               <a class="dropdown-item" href="./index.html">
