--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
                 </a>
               </li>
               <li>
-                <a href="./contact_.html">
+                <a href="./contact.html">
                   Fale Conosco
                 </a>
               </li>
