--- a/salesReport.html
+++ b/salesReport.html
@@ -50,12 +50,11 @@
                 <p>Varejista</p>
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink1">
-
+                <a class="dropdown-item" href="./activateProducts.html">
+                  <i class="now-ui-icons design_bullet-list-67"></i> Ativar / Inativar Produto
+                </a>
                 <a class="dropdown-item" href="./deliveryLocations.html">
                   <i class="now-ui-icons shopping_delivery-fast"></i> Bairros p/ Entrega
-                </a>
-                <a class="dropdown-item" href="./salesReport.html">
-                  <i class="now-ui-icons files_single-copy-04"></i> Relatórios Vendas
                 </a>
                 <a class="dropdown-item" href="./clientReport.html">
                   <i class="now-ui-icons files_single-copy-04"></i> Relatórios Avaliações
@@ -102,16 +101,18 @@
       </div>
       <div class="section section-javascript" id="javascriptComponents">
         <div class="container">
-          <h3 class="title">Ativar / Inativar Produto</h3>
+          <h3 class="title">Relatórios Vendas</h3>
           <div class="row" id="modals">
             <br />
             <br />
             <div class="col-lg-6">
-              <h4>Busca por produto:</h4>
+              <h4>Busca por data:</h4>
               <div class="row">
-                <div class="col-sm-6 col-lg-8">
-                  <div class="form-group has-success">
-                    <input type="text" value="" class="form-control form-control-success" />
+                <div class="col-md-6">
+                  <div class="datepicker-container">
+                    <div class="form-group">
+                      <input type="text" class="form-control date-picker" value="10/05/2016" data-datepicker-color="primary">
+                    </div>
                   </div>
                 </div>
               </div>
@@ -125,72 +126,32 @@
       <table class="table">
         <thead class="thead-light">
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nome Produto</th>
-            <th scope="col">Disponibilidade</th>
-            <th scope="col">Valor</th>
+            <th scope="col">ID da Venda</th>
+            <th scope="col">Dia da Venda</th>
+            <th scope="col">Valor da Venda</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>Arroz Kika 1kg</td>
-            <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
-            <td>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">R$</span>
-                </div>
-                <input type="text" class="form-control" placeholder="0,00"  aria-describedby="basic-addon1">
-              </div>
-            </td>
+            <td>05/01/2020</td>
+            <td>R$ 550,00</td>
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>Feijão Preto 1kg</td>
-            <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
-            <td>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">R$</span>
-                </div>
-                <input type="text" class="form-control" placeholder="0,00"  aria-describedby="basic-addon1">
-              </div>
-            </td>
+            <td>10/01/2020</td>
+            <td>R$ 380,00</td>
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>Café tres corações</td>
-            <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
-            <td>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">R$</span>
-                </div>
-                <input type="text" class="form-control" placeholder="0,00"  aria-describedby="basic-addon1">
-              </div>
-            </td>
-          </tr>
+            <td>02/01/2020</td>
+            <td>R$ 720,00</td>
           <tr>
             <th scope="row">4</th>
-            <td>Jucurutu</td>
-            <td><input type="checkbox" name="checkbox" class="bootstrap-switch" data-on-label="ON" data-off-label="OFF" /></td>
-            <td>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">R$</span>
-                </div>
-                <input type="text" class="form-control" placeholder="0,00"  aria-describedby="basic-addon1">
-              </div>
-            </td>
-          </tr>
+            <td>07/01/2020</td>
+            <td>R$ 250,00</td>
         </tbody>
       </table>
-      <div class="send-button">
-        <button class="btn btn-primary btn-round btn-block btn-lg" data-toggle="modal" data-target="#myModal1">
-          Salvar
-        </button>
-      </div>
       <div class="space-70"></div>
       </div>
       <div class="space-70"></div>
@@ -225,36 +186,37 @@
         </div>
       </footer>
     </div>
-  
-    <!--   Core JS Files   -->
-  <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-  <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-  <script src="./assets/js/plugins/bootstrap-switch.js"></script>
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-  <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-  <script src="./assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-  <script src="./assets/js/now-ui-kit.js?v=1.3.0" type="text/javascript"></script>
-  <script>
-    $(document).ready(function() {
-      // the body of this function is in assets/js/now-ui-kit.js
-      nowuiKit.initSliders();
-    });
 
-    function scrollToDownload() {
+<!--   Core JS Files   -->
+<script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+<script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+<script src="./assets/js/plugins/bootstrap-switch.js"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
+<script src="./assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+<!--  Google Maps Plugin    -->
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
+<script src="./assets/js/now-ui-kit.js?v=1.3.0" type="text/javascript"></script>
+<script>
+  $(document).ready(function() {
+    // the body of this function is in assets/js/now-ui-kit.js
+    nowuiKit.initSliders();
+  });
 
-      if ($('.section-download').length != 0) {
-        $("html, body").animate({
-          scrollTop: $('.section-download').offset().top
-        }, 1000);
-      }
+  function scrollToDownload() {
+
+    if ($('.section-download').length != 0) {
+      $("html, body").animate({
+        scrollTop: $('.section-download').offset().top
+      }, 1000);
     }
-  </script>
+  }
+</script>
+
 </body>
 
 </html>
